Fix project spacing

--- a/css/style.css
+++ b/css/style.css
@@ -67,8 +67,8 @@ span.bang {
 }
 
 span.project {
-  margin-bottom: 5px;
   display: flex;
+  margin-bottom: -5px;
 }
 
 span.quest {
